force-app/main/default/objects/SPEN_ContactPremise__c/SPEN_ContactPremise__c.object-meta.xml
<CustomObject>
    <label>Contact Premise</label>
    <nameField>
        <displayFormat>CP-{000000}</displayFormat>
        <label>Contact Premise Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Premises</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>