force-app/main/default/objects/SPEN_ContactPremise__c/fields/Other_Phone__c.field-meta.xml
<CustomField>
    <fullName>Other_Phone__c</fullName>
    <formula>SPEN_RelatedContact__r.OtherPhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Phone</label>
    <type>Text</type>
</CustomField>