force-app/main/default/objects/SPEN_ContactPremise__c/fields/SPEN_AccountMPANNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AccountMPANNumber__c</fullName>
    <description>Get MPAN number from premise for IVR</description>
    <formula>SPEN_Premise__r.SPEN_AccountNumberMPAN__r.SPEN_AccountNumberMPAN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Premise Account Number(MPAN)</label>
    <type>Text</type>
</CustomField>