force-app/main/default/objects/SPEN_ContactPremise__c/fields/SPEN_ApplicantforConnection__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ApplicantforConnection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is for Connections purpose.</description>
    <label>Applicant for Connection</label>
    <type>Checkbox</type>
</CustomField>