force-app/main/default/objects/SPEN_ContactPremise__c/fields/SPEN_ContactId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ContactId__c</fullName>
    <description>Will be storing the related  Contact Id</description>
    <formula>SPEN_RelatedContact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactId</label>
    <type>Text</type>
</CustomField>