force-app/main/default/objects/SPEN_ContactPremise__c/fields/SPEN_ContactPremiseId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ContactPremiseId__c</fullName>
    <description>This will get the Premise id from the Premise object</description>
    <formula>SPEN_Premise__r.SPEN_PremiseID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact PremiseId</label>
    <type>Text</type>
</CustomField>