force-app/main/default/objects/SPEN_ContactPremise__c/fields/SPEN_DistrictValue__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DistrictValue__c</fullName>
    <formula>SPEN_Premise__r.SPEN_District__c</formula>
    <label>DistrictValue</label>
    <type>Text</type>
</CustomField>