force-app/main/default/objects/SPEN_ContactPremise__c/fields/SPEN_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>49</length>
    <type>Text</type>
</CustomField>