force-app/main/default/objects/SPEN_ContactPremise__c/fields/SPEN_FullAddress__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FullAddress__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>It will display full address field</description>
    <formula>SPEN_Premise__r.SPEN_FlatNumber__c &amp;&quot; &quot;&amp; SPEN_Premise__r.SPEN_BuildingNameNumber__c &amp;&quot; &quot;&amp; SPEN_Premise__r.SPEN_Street__c</formula>
    <label>FullAddress</label>
    <type>Text</type>
</CustomField>