force-app/main/default/objects/SPEN_ContactPremise__c/fields/SPEN_PremiseFullAddress__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PremiseFullAddress__c</fullName>
    <description>Full Address of Premise</description>
    <formula>SPEN_Premise__r.SPEN_FullAddress__c</formula>
    <label>Premise Address</label>
    <type>Text</type>
</CustomField>