force-app/main/default/objects/SPEN_ContactPremise__c/fields/SPEN_PremiseObjectPremiseName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PremiseObjectPremiseName__c</fullName>
    <description>will be storing the Premise object premise name</description>
    <formula>SPEN_Premise__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Premise Identifier</label>
    <type>Text</type>
</CustomField>