force-app/main/default/objects/SPEN_ContactPremise__c/fields/SPEN_PremiseObjectPremiseNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PremiseObjectPremiseNumber__c</fullName>
    <description>Will be storing Premise object Premise Number</description>
    <formula>SPEN_Premise__r.SPEN_PremiseNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Premise Number</label>
    <type>Text</type>
</CustomField>