force-app/main/default/objects/SPEN_ContactPremise__c/fields/SPEN_PremisePostCode__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PremisePostCode__c</fullName>
    <description>Will be storing the premise object postcode in this field</description>
    <formula>SPEN_Premise__r.SPEN_PostCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Premise Post Code</label>
    <type>Text</type>
</CustomField>