force-app/main/default/objects/SPEN_ContactPremise__c/fields/SPEN_PremisePrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PremisePrimaryContact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this contact is the primary contact the linked Premise</description>
    <label>Primary Contact</label>
    <type>Checkbox</type>
</CustomField>