force-app/main/default/objects/SPEN_ContactPremise__c/fields/SPEN_RelatedContact__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RelatedContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Premises</relationshipLabel>
    <relationshipName>Contact_Premises</relationshipName>
    <type>Lookup</type>
</CustomField>