force-app/main/default/objects/SPEN_ContactPremise__c/fields/SPEN_RelatedContactMobile__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RelatedContactMobile__c</fullName>
    <formula>SPEN_RelatedContact__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Contact Mobile</label>
    <type>Text</type>
</CustomField>