force-app/main/default/objects/SPEN_ContactPremise__c/fields/SPEN_RelatedContactName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RelatedContactName__c</fullName>
    <description>Contact premise-related contact names will captured in this field</description>
    <formula>SPEN_RelatedContact__r.FirstName  &amp;  SPEN_RelatedContact__r.MiddleName  &amp;  SPEN_RelatedContact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Contact Name</label>
    <type>Text</type>
</CustomField>