force-app/main/default/objects/SPEN_ContactPremise__c/fields/SPEN_RelatedContactPhone__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RelatedContactPhone__c</fullName>
    <description>It will store the related contact Customer Telephone</description>
    <formula>SPEN_RelatedContact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Contact Phone</label>
    <type>Text</type>
</CustomField>