force-app/main/default/objects/SPEN_ContactPremise__c/fields/SPEN_RelationshipWithPremise__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RelationshipWithPremise__c</fullName>
    <label>Relationship with Premise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Landlord</fullName>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
            <value>
                <fullName>Family Member</fullName>
            </value>
            <value>
                <fullName>Friends</fullName>
            </value>
            <value>
                <fullName>Neighbours</fullName>
            </value>
            <value>
                <fullName>Property Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>