force-app/main/default/objects/SPEN_ContactPremise__c/fields/SPEN_Role__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>PSR Contact</fullName>
                <label>PSR Contact (Primary)</label>
            </value>
            <value>
                <fullName>Alternative Contact</fullName>
            </value>
            <value>
                <fullName>Premise Owner</fullName>
            </value>
            <value>
                <fullName>PSR Contact (Alternative)</fullName>
            </value>
            <value>
                <fullName>Site Contact</fullName>
                <isActive>false</isActive>
                <label>Site Contact</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>