force-app/main/default/objects/SPEN_ContactPremise__c/validationRules/ContactValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ContactValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED( SPEN_ContactId__c ), ISBLANK( SPEN_ContactId__c ) )</errorConditionFormula>
    <errorMessage>You cannot remove a contact from a contact premise record. If the record is incorrect please amend the contact or the premise within the contact premise record</errorMessage>
</ValidationRule>